--- a/Frontend/src/app/components/footer/footer.component.css
+++ b/Frontend/src/app/components/footer/footer.component.css
@@ -1,27 +1,112 @@
 .footer {
-    background-color: #181818;
-    color: #ffffff;
-    padding: 20px 0;
-    text-align: center;
-  }
-  
-  .footer-content p {
-    margin: 0;
-    font-size: 14px;
-  }
-  
-  .footer nav {
-    margin-top: 10px;
-  }
-  
-  .footer-link {
-    color: #ffffff;
-    text-decoration: none;
-    margin: 0 5px;
-  }
-  
-  .footer-link:hover {
-    color: #dddddd;
-    text-decoration: underline;
-  }
-  
+  background-color: #181818;
+  color: #ffffff;
+  padding: 20px 0;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-left, .footer-center, .footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-left {
+  align-items: flex-start;
+}
+
+.footer-right {
+  align-items: flex-end;
+}
+
+.company-name {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-social {
+  display: flex;
+  gap: 10px;
+}
+
+.social-icon {
+  color: #ffffff;
+  font-size: 20px;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.social-icon:hover {
+  color: #dddddd;
+}
+
+/* Alineación horizontal de los enlaces en el centro */
+.footer-center {
+  margin-top: 15px;
+  text-align: center;
+}
+
+.footer-nav {
+  display: flex;
+  gap: 15px; /* Espaciado entre enlaces */
+}
+
+.footer-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer-link:hover {
+  color: #dddddd;
+}
+
+.login-link {
+  cursor: pointer;
+  transition: opacity 0.3s;
+}
+
+.login-link:hover {
+  opacity: 1;
+}
+
+.footer-right .subscribe-text {
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+.subscribe-form input[type="email"] {
+  padding: 5px;
+  font-size: 14px;
+  border: 1px solid #444444;
+  border-radius: 3px 0 0 3px;
+  outline: none;
+  color: #ffffff;
+  background-color: #282828;
+}
+
+.subscribe-form button {
+  padding: 5px 10px;
+  font-size: 14px;
+  color: #ffffff;
+  background-color: #444444;
+  border: none;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.subscribe-form button:hover {
+  background-color: #606060;
+}
