--- a/Frontend/src/app/pages/home/home.component.css
+++ b/Frontend/src/app/pages/home/home.component.css
@@ -2,15 +2,17 @@
 .home-container {
   max-width: auto;
   margin: 0 auto;
+  
 }
 
 .image-section {
     display: flex;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    flex-wrap: nowrap; /* Prevent wrapping to a new line */
+    flex-wrap: wrap; /* Prevent wrapping to a new line */
+
 }
 
 .image-item {
@@ -71,6 +73,9 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 30px;
+  color: #ffffff;
+  background-color: #181818;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   
 }
 
@@ -83,6 +88,7 @@
 
 .service-card {
   background-color: #f4f4f4;
+  color: #181818;
   padding: 20px;
   text-align: center;
   border-radius: 8px;
@@ -142,7 +148,7 @@
   width: 100%;
   max-height: 250px; /* Limitar la altura de la imagen */
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 /* Footer al final de la página */
