--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,58 +1,41 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>François Hollan Banquetería</title>
-  <!-- Enlazar tu archivo CSS -->
-  <link rel="stylesheet" href="./navbar.component.css"> <!-- Asegúrate de que esta ruta sea correcta -->
-  <!-- Agregar Bootstrap (si es necesario) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Agregar los íconos de Bootstrap (si es necesario) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-</head>
-<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand d-flex align-items-center" [routerLink]="['/']" routerLinkActive="active">
+      <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjdh0zXXL5P8pPduxGpoRKJ4Ji4kGXc1exeXQGVozMH6tlE5K-w9I7666Ulttjb0U6b9oFxuuX4BW5mBHBfL6tLLsNfipYo3j7gTLaty8Qo4a5RDYMOabhgYFS7ER1J8ic5y33mjEcSPo4ysbZrP7JkOhT_E8mP6UTTJ6SMEu8iDCyYuCaUt7t_80w3-K50" class="navbar-logo">
+      François Hollan Banquetería
+    </a>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEjdh0zXXL5P8pPduxGpoRKJ4Ji4kGXc1exeXQGVozMH6tlE5K-w9I7666Ulttjb0U6b9oFxuuX4BW5mBHBfL6tLLsNfipYo3j7gTLaty8Qo4a5RDYMOabhgYFS7ER1J8ic5y33mjEcSPo4ysbZrP7JkOhT_E8mP6UTTJ6SMEu8iDCyYuCaUt7t_80w3-K50"  class="navbar-logo"> <!-- Logo -->
-        François Hollan Banquetería
-      </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Inicio</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Servicios
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-              <li><a class="dropdown-item" href="#">Salones</a></li>
-              <li><a class="dropdown-item" href="#">Banquetería</a></li>
-              <li><a class="dropdown-item" href="#">Entretenimiento</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Mis Reservas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="bi bi-cart"></i> <!-- Ícono del carrito -->
-            </a>
-          </li>
-        </ul>
-      </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/']" routerLinkActive="active">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Servicios
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
+            <li><a class="dropdown-item" [routerLink]="['/salones']" routerLinkActive="active">Salones</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/banqueteria']" routerLinkActive="active">Banquetería</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/entretenimiento']" routerLinkActive="active">Entretenimiento</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/buscar-reserva']" routerLinkActive="active">Mis Reservas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="active">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/carrito']" routerLinkActive="active">
+            <i class="bi bi-cart"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-  </nav>
-
-  <!-- Agregar los scripts necesarios de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+  </div>
+</nav>
