--- a/Frontend/src/app/pages/home/home.component.css
+++ b/Frontend/src/app/pages/home/home.component.css
@@ -8,10 +8,10 @@
 .image-section {
     display: flex;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     overflow: hidden;
-    flex-wrap: wrap; /* Prevent wrapping to a new line */
+    flex-wrap: nowrap; /* Prevent wrapping to a new line */
 
 }
 
@@ -24,6 +24,7 @@
 
 #salones {
   clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%); /* Forma de Salones */
+
 }
 
 #banqueteria {
@@ -40,6 +41,7 @@
   object-fit: cover;
   transition: transform 0.3s ease;
   display: block; /* Ensure images are block elements */
+  padding: auto;
 }
 
 .image-item:hover img {
