--- a/Frontend/src/app/components/footer/footer.component.html
+++ b/Frontend/src/app/components/footer/footer.component.html
@@ -17,7 +17,9 @@
               <a href="#" class="footer-link">Sobre Nosotros</a>
               <a href="#" class="footer-link">Contáctenos</a>
               <a href="#" class="footer-link">Soporte al Cliente</a>
-              <a href="#" class="footer-link login-link">Iniciar Sesión</a>
+              <a routerLink="/iniciar-sesion" class="footer-link login-link">Iniciar Sesión</a>
+
+
           </nav>
       </div>
 
