--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -19,9 +19,9 @@
             Servicios
           </a>
           <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-            <li><a class="dropdown-item" [routerLink]="['/armar-pedido']" routerLinkActive="active">Salones</a></li>
-            <li><a class="dropdown-item" [routerLink]="['/armar-pedido']" routerLinkActive="active">Banquetería</a></li>
-            <li><a class="dropdown-item" [routerLink]="['/armar-pedido']" routerLinkActive="active">Entretenimiento</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/salones']" routerLinkActive="active">Salones</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/banqueteria']" routerLinkActive="active">Banquetería</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/entretenimiento']" routerLinkActive="active">Entretenimiento</a></li>
           </ul>
         </li>
         <li class="nav-item">
