--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -3,21 +3,21 @@
 <div class="home-container">
     
     <div class="image-section">
-        <div class="image-item" id="salones" (click)="navigateTo('/armar-pedido')">
+        <div class="image-item" id="salones" (click)="navigateTo('/salones')">
           <img 
             src="https://z-p3-scontent.fkna2-1.fna.fbcdn.net/v/t1.6435-9/182928198_4181752408556192_63860439584394536_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=13d280&_nc_ohc=GMtFYvRHcd4Q7kNvgE1u19d&_nc_zt=23&_nc_ht=z-p3-scontent.fkna2-1.fna&_nc_gid=AaRPoyYcsugjoLY-dtAQCaw&oh=00_AYDTSLO52_Vp1wHd7XOPF3IsMnOXt31XGF4Z6G1Q5A-n2A&oe=6757308F" 
             alt="Imagen Salones"
           >
           <div class="overlay"><p>Salones</p></div>
         </div>
-        <div class="image-item" id="banqueteria" (click)="navigateTo('/armar-pedido')">
+        <div class="image-item" id="banqueteria" (click)="navigateTo('/banqueteria')">
           <img 
             src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEizUJK6X9JZP1F3jTDy_vcPvis-H_660rK1ehKMF1QlnSo5ZmHZ7JN9aeG-4zPksOooQCtK8IvBf9BgeFLW8YwjqTTJQWDUVa_KwwoLXndJPC31jeobtP434hBcqYRRA1y-dvPW4ZaYaWo/s1600/FLAVOURS.jpg" 
             alt="Imagen Banquetería"
           >
           <div class="overlay"><p>Banquetería</p></div>
         </div>
-        <div class="image-item" id="entretenimiento" (click)="navigateTo('/armar-pedido')">
+        <div class="image-item" id="entretenimiento" (click)="navigateTo('/entretenimiento')">
           <img 
             src="https://media.v2.siweb.es/uploaded_thumb_seo/e89129f136877ce57afcc6e44fccbb55/batucada_2.jpg" 
             alt="Imagen Entretenimiento"
