--- a/Frontend/src/app/pages/contacto/contacto.component.html
+++ b/Frontend/src/app/pages/contacto/contacto.component.html
@@ -1,3 +1,56 @@
 <app-navbar></app-navbar>
-<p>contacto works!</p>
+<div class="contact-container">
+    <div class="contact-info">
+      <h3>Información de Contacto</h3>
+      <div class="info-item">
+        <i class="fa fa-map-marker"></i>
+        <p>
+          <strong>Nuestra Dirección</strong><br>
+          Quillora 980<br>
+          Viña del Mar, Chile
+        </p>
+      </div>
+      <div class="info-item">
+        <i class="fa fa-phone"></i>
+        <p>
+          <strong>Numero de Telefono</strong><br>
+          +569 9586 4569<br>
+          +569 9568 4513
+        </p>
+      </div>
+      <div class="info-item">
+        <i class="fa fa-envelope"></i>
+        <p>
+          <strong>Dirección de Correo</strong><br>
+          acaad103&#64;gmail.com<br>
+        </p>
+      </div>
+      <img src="path-to-your-image/contact-image.png" alt="Contact Us" class="contact-image">
+    </div>
+  
+    <div class="contact-form">
+      <h2>Formulario de Contacto</h2>
+      <form>
+        <div class="form-group">
+          <label>Nombre Completo</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Tu Correo Electronico</label>
+          <input type="email" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Razón</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Comentario (optional)</label>
+          <textarea class="form-control"></textarea>
+        </div>
+        <button type="submit" class="btn btn-submit">Enviar</button>
+      </form>
+    </div>
+  </div>  
+  <div id="map" style="height: 300px; width: 100%;"></div>
+
 <app-footer></app-footer>
