--- a/Frontend/src/app/pages/contacto/contacto.component.html
+++ b/Frontend/src/app/pages/contacto/contacto.component.html
@@ -25,7 +25,6 @@
           acaad103&#64;gmail.com<br>
         </p>
       </div>
-      <img src="path-to-your-image/contact-image.png" alt="Contact Us" class="contact-image">
     </div>
   
     <div class="contact-form">
@@ -44,7 +43,7 @@
           <input type="text" class="form-control">
         </div>
         <div class="form-group">
-          <label>Comentario (optional)</label>
+          <label>Descripción</label>
           <textarea class="form-control"></textarea>
         </div>
         <button type="submit" class="btn btn-submit">Enviar</button>
