--- a/Frontend/src/app/components/footer/footer.component.html
+++ b/Frontend/src/app/components/footer/footer.component.html
@@ -14,9 +14,9 @@
       <!-- Sección central: Enlaces de navegación -->
       <div class="footer-center">
           <nav class="footer-nav">
-              <a href="#" class="footer-link">Sobre Nosotros</a>
-              <a href="#" class="footer-link">Contáctenos</a>
-              <a href="#" class="footer-link">Soporte al Cliente</a>
+              <a href="/home" class="footer-link">Sobre Nosotros</a>
+              <a routerLink="/contacto" class="footer-link">Contáctenos</a>
+              <a routerLink="/contacto" class="footer-link">Soporte al Cliente</a>
               <a routerLink="/iniciar-sesion" class="footer-link login-link">Iniciar Sesión</a>
 
 
