--- a/Frontend/src/app/pages/banqueteria/banqueteria.component.html
+++ b/Frontend/src/app/pages/banqueteria/banqueteria.component.html
@@ -30,7 +30,6 @@
           <div class="card-footer">
             <div class="rating">
               <span class="score">8.8</span>
-
             </div>
             <span class="price">Desde {{ service.price | currency }}</span>
           </div>
@@ -38,37 +37,36 @@
       </div>
     </div>
   </main>
+ <!-- Modal para la card expandida -->
+ <div class="modal" *ngIf="selectedService" (click)="closeModal($event)">
+  <div class="modal-content" (click)="$event.stopPropagation()">
+    <div class="modal-grid">
+      <!-- Columna izquierda: Imagen -->
+      <div class="modal-image">
+        <img [src]="selectedService.image" alt="{{ selectedService.name }}" />
+      </div>
 
-  <!-- Modal para la card expandida -->
-  <div class="modal" *ngIf="selectedService" (click)="closeModal($event)">
-    <div class="modal-content" (click)="$event.stopPropagation()">
-      <div class="modal-grid">
-        <!-- Columna izquierda: Imagen -->
-        <div class="modal-image">
-          <img [src]="selectedService.image" alt="{{ selectedService.name }}" />
-        </div>
+      <!-- Columna derecha: Información -->
+      <div class="modal-details">
+        <!-- Título -->
+        <h3 class="service-title">{{ selectedService.name }}</h3>
 
-        <!-- Columna derecha: Información -->
-        <div class="modal-details">
-          <!-- Título -->
-          <h3 class="service-title">{{ selectedService.name }}</h3>
+        <!-- Descripción -->
+        <p class="service-description">{{ selectedService.description }}</p>
 
-          <!-- Descripción -->
-          <p class="service-description">{{ selectedService.description }}</p>
+        <!-- Pie de la columna derecha -->
+        <div class="details-footer">
+          <!-- Precio -->
+          <span class="price">{{ selectedService.price | currency }}</span>
 
-          <!-- Pie de la columna derecha -->
-          <div class="details-footer">
-            <!-- Precio -->
-            <span class="price">{{ selectedService.price | currency }}</span>
-
-            <!-- Botón con forma de carrito -->
-            <button class="add-to-cart" (click)="addToCart(selectedService)">
-              <i class="fa fa-shopping-cart"></i> Añadir
-            </button>
-          </div>
+          <!-- Botón con forma de carrito -->
+          <button class="add-to-cart" (click)="addToCart(selectedService)">
+            <i class="fa fa-shopping-cart"></i> Añadir al Carrito
+          </button>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
 <app-footer></app-footer>
