--- a/Frontend/src/app/pages/entretenimiento/entretenimiento.component.html
+++ b/Frontend/src/app/pages/entretenimiento/entretenimiento.component.html
@@ -63,7 +63,7 @@
 
             <!-- Botón con forma de carrito -->
             <button class="add-to-cart" (click)="addToCart(selectedService)">
-              <i class="fa fa-shopping-cart"></i> Añadir
+              <i class="fa fa-shopping-cart"></i> Añadir al Carrito
             </button>
           </div>
         </div>
