--- a/Frontend/src/app/pages/buscar-reserva/buscar-reserva.component.html
+++ b/Frontend/src/app/pages/buscar-reserva/buscar-reserva.component.html
@@ -1,4 +1,12 @@
-
 <app-navbar></app-navbar>
-<p>buscar-reserva works!</p>
+<p><div class="reservas-container">
+    <h2>Tus Reservas</h2>
+    <ul>
+      <li *ngFor="let reserva of reservas">
+        <h3>{{ reserva.servicio }}</h3>
+        <p>Fecha: {{ reserva.fecha }}</p>
+        <p>Estado: {{ reserva.estado }}</p>
+      </li>
+    </ul>
+  </div>
 <app-footer></app-footer>
