--- a/Frontend/src/app/pages/contacto/contacto.component.css
+++ b/Frontend/src/app/pages/contacto/contacto.component.css
@@ -1,9 +1,9 @@
 .contact-container {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    max-width: 900px;
-    margin: auto;
+    padding: 80px;
+    max-width: 1368px;
+    margin: Auto;
   }
   
   .contact-info {
